#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-01-15>

Enhance Eshell keybinding setup with compatibility and fallbacks

- Refactored Eshell keybindings setup:
  - Introduced `my/setup-eshell-keybindings` to handle version compatibility and fallbacks.
  - Added conditional checks for `eshell-hist-mode-map`, `eshell-mode-map`, and `eshell-cmpl-mode-map` to ensure compatibility with different Emacs versions.
  - Assigned `M-r` to `my/eshell-history-completing-read` and unbound `M-s` when applicable.
  - Added `C-M-i` for `completion-at-point` with fallback to general key maps when specific maps aren't available.

** <2025-01-11>

shell/eshell - improve history management and completion

- Add `my/load-bash-history` to load `.bash_history` into `comint-input-ring`.
- Add `my/shell-history-complete` for shell history completion (`M-r`).
- Introduce `my/eshell-history-capf` and `my/shell-history-capf` for dynamic shell/eshell history completions.
- Setup `completion-at-point` integrations for shell and eshell history.
- Customize `completion-category-overrides` for improved matching in eshell and shell modes.

** <2025-01-11>

- =consult-history= potential replacement using enhanced eshell setup
  - Appended Bash history to eshell history on load.
  - Introduced `my/eshell-history-completing-read`.
  - Added `M-r` for eshell history search.
    
** <2025-01-08>

- Added open-with replacement using dired.
- Replacing =dired-async-mode= with =my/rsync= function to enable asynchronous copy directly from dired.
- Bind `C` in `dired-mode-map` to invoke the new rsync functionality.

** <2025-01-07>

Add eglot replacement using custom etags functions and keybindings

- Added `my/etags-load`: Locate and load the nearest TAGS file.